# menualtoque-mvp

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.postgres  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  infrastructure.yml
alembic/: env.py
alembic/versions/: 3f9afde04c3c_reinitializgin.py  5fe9a3ef9c78_add_user_onboarding_fields.py  8cc9bedcf004_add_user_roles_remove_all_food_logic.py  9295a73b8c2f_description_of_changes.py  b319f9eab37e_remove_food_consumption_nutrition_tables.py
app/domain/: errors.py
app/domain/entities/: email_tokens.py  refresh_token.py  user.py
app/frameworks/: email.py  settings.py
app/frameworks/http/: api.py  deps.py  error_handlers.py  rate_limiter.py  schemas.py
app/frameworks/persistence/: database.py
app/interfaces/persistence/: models.py  repositories.py  uow.py
app/interfaces/providers/: email_sender.py  google_verifier.py
app/interfaces/security/: jwt_service.py  password_hasher.py
app/templates/emails/: base.html  password_reset_email.html  verification_email.html
app/use_cases/: ports.py
app/use_cases/auth/: change_password.py  confirm_email.py  google_sign_in.py  login_password.py  logout.py  refresh_access.py  register_user.py  request_password_reset.py  reset_password.py
app/use_cases/user/: delete_user.py  (+4 more)
config/environments/: development.env  production.env  staging.env
docker/: Dockerfile.dev
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: init-db.sql  start.sh  wait-for-postgres.sh
(+16 files in other folders)
