[project]
name = "menualtoque-mvp"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["migrations", ".venv", "venv"]
# Common, pragmatic rule sets:
select = [
  "E","F","W",          # pycodestyle/pyflakes
  "I",                  # import sorting
  "UP",                 # pyupgrade
  "B",                  # flake8-bugbear
  "C4",                 # flake8-comprehensions
  "SIM",                # flake8-simplify
  "PL",                 # pylint (selected ports)
  "PERF",               # performance
  "RUF",                # ruff-specific
  "D"                   # pydocstyle (docstrings)
]
ignore = [
  "D100","D104","D105","D107","D102","D101",  # don’t force module/class docstrings everywhere
  "D203","D213"                 # prefer google-style single-blank-line
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"          # or "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["app", "domain", "application", "infrastructure", "interfaces"]
combine-as-imports = true

# Type
